--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,maximum-scale=1"
     />
-    <title>Vite + React</title>
+    <title>WonderNot</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+[![Netlify
+Status](https://api.netlify.com/api/v1/badges/412b29f6-cd62-48bd-ab9b-9a566c7837bb/deploy-status)](https://app.netlify.com/sites/wondernot/deploys)
